[gd_scene load_steps=6 format=3 uid="uid://dnfh3oehy5sxp"]

[ext_resource type="Script" uid="uid://4tcp4p3cbtys" path="res://addons/hackpal/hackpal.gd" id="1_hask1"]
[ext_resource type="Theme" uid="uid://cs1s50edgkqks" path="res://addons/hackpal/assets/title.tres" id="2_25s5n"]
[ext_resource type="Texture2D" uid="uid://s23neutn44y5" path="res://addons/hackpal/assets/refresh-gray.png" id="3_d5vro"]

[sub_resource type="World3D" id="World3D_hask1"]

[sub_resource type="ViewportTexture" id="ViewportTexture_d5vro"]
viewport_path = NodePath("HackyViewport")

[node name="Hackpal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_hask1")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="HackyViewport" type="SubViewport" parent="."]
own_world_3d = true
world_3d = SubResource("World3D_hask1")
size = Vector2i(1152, 648)

[node name="HackyTextureReck" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ViewportTexture_d5vro")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="original_name" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/original_name"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/original_name/VBoxContainer"]
layout_mode = 2
text = "Your user ID"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/original_name/VBoxContainer"]
layout_mode = 2

[node name="slackid" type="LineEdit" parent="VBoxContainer/original_name/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "U041FQB8VK2"

[node name="Button" type="Button" parent="VBoxContainer/original_name/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Apply"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Send" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="Send" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/Send"]
layout_mode = 2
size_flags_horizontal = 3

[node name="title" type="Label" parent="VBoxContainer/HBoxContainer/Send/Send"]
layout_mode = 2
theme = ExtResource("2_25s5n")
text = "Send"

[node name="to" type="Label" parent="VBoxContainer/HBoxContainer/Send/Send"]
layout_mode = 2
text = "to"

[node name="to_edit" type="LineEdit" parent="VBoxContainer/HBoxContainer/Send/Send"]
layout_mode = 2

[node name="content" type="Label" parent="VBoxContainer/HBoxContainer/Send/Send"]
layout_mode = 2
text = "content"

[node name="content_edit" type="TextEdit" parent="VBoxContainer/HBoxContainer/Send/Send"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 3

[node name="send" type="Button" parent="VBoxContainer/HBoxContainer/Send/Send"]
layout_mode = 2
size_flags_horizontal = 0
text = "Send
"

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(5, 500)
layout_mode = 2

[node name="Receive" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="Receive" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/Receive"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/Receive/Receive"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Receive/Receive/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_25s5n")
text = "Receive"

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/HBoxContainer/Receive/Receive/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_d5vro")
texture_pressed = ExtResource("3_d5vro")
texture_hover = ExtResource("3_d5vro")
texture_disabled = ExtResource("3_d5vro")
texture_focused = ExtResource("3_d5vro")

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/Receive/Receive"]
layout_mode = 2
size_flags_vertical = 3

[node name="PostcardBox" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/Receive/Receive/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="resized" from="HackyTextureReck" to="." method="_on_texture_rect_resized"]
[connection signal="pressed" from="VBoxContainer/original_name/VBoxContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Send/Send/send" to="." method="_on_send_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Receive/Receive/HBoxContainer/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
